--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -1,4 +1,5 @@
-# This workflow uses actions that are not certified by GitHub.
+- name: Set execute permission for gradlew
+  run: chmod +x gradlew# This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
@@ -31,7 +32,5 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
-    - name: Build with Gradle Wrapper
-      run: |
-        chmod +x gradlew
-        ./gradlew build
+   - name: Set execute permission for gradlew
+  run: chmod +x gradlew
