--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -32,7 +32,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
-  - name: Grant execute permission to Gradle Wrapper
-  run: chmod +x gradlew
+  - name: Debug Gradle Wrapper Directory
+  run: ls -l
+
 
 
